fix: constructor injection + specific exceptions + modern streams